refactor(metadata): convert inner classes to records, simplify logic, and apply Spotless formatting
- Replace simple value classes with Java records
- Simplify conditional logic and switch expressions
- Use Math.clamp for bounded values
- Minor exception message cleanup
- Apply Spotless formatting